# RustZipCracker

./: .gitignore  Cargo.toml  README.md
src/: main.rs  zip_hash.txt
